# bdist_pyinstaller

./: .gitignore  CONTRIBUTING.md  GETTINGSTARTED.md  GLOSSARY.md  HELPWANTED.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  publish-to-test-and-prod-pypi.yml
src/bdist_pyinstaller/: bdist_pyinstaller.py
tests/: conftest.py  test_bdist_pyinstaller.py
tests/testdata/simple/: setup.py
tests/testdata/simple/simple/: cli.py
