[bumpversion]
current_version = 0.1.0

[metadata]
name = bdist_pyinstaller
version = attr: bdist_pyinstaller.__version__
description = A side-car distutils command to automate creation of the pyinstaller packages in a non-intrusive way
long_description_content_type = text/markdown
long_description = file: README.md
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: System :: Archiving :: Packaging
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
author = Waldek Herka
author_email = wherka-ama@users.noreply.github.com
maintainer = Waldek Herka
maintainer_email = wherka-ama@users.noreply.github.com
url = https://github.com/AmadeusITGroup/bdist_pyinstaller
project_urls = 
	Issue Tracker = https://github.com/AmadeusITGroup/bdist_pyinstaller/issues
keywords = PyInstaller, packaging
license = Apache-2.0
license_files = LICENSE

[options]
package_dir = 
	= src
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires = setuptools >= 40.9.0
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 3.0.0
	pytest-cov

[options.entry_points]
distutils.commands = 
	bdist_pyinstaller = bdist_pyinstaller.bdist_pyinstaller:PyInstalerCmd

[tool:pytest]
addopts = --cov=bdist_pyinstaller
testpaths = tests

[coverage:run]
source = bdist_pyinstaller

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

[bdist_wheel]
universal = 1

[aliases]
test = pytest
